eks/playa3ull-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: playa3ulldemoapp
  name: playa3ulldemoapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: playa3ulldemoapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 2
  template:
    metadata:
      labels:
        app: playa3ulldemoapp
    spec:
      containers:
        - image: naveen75/playa3ulldemo:1.0.1
          name: playa3ulldemoapp
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
