eks/playa3ull-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    job: node-api
    app: playa3ulldemoapp
  name: playa3ulldemoapp
spec:
  ports:
    - name: playa3ulldemoapp-port
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: playa3ulldemoapp
