eks/playa3ull-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playa3ulldemoapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "shared-alb-group"
    alb.ingress.kubernetes.io/group.order: "1"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: playa3ulldemoapp
                port:
                  number: 9000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: playa3ulldemoapp
                port:
                  number: 9000
          - path: /serverError
            pathType: Prefix
            backend:
              service:
                name: playa3ulldemoapp
                port:
                  number: 9000
          - path: /crash
            pathType: Prefix
            backend:
              service:
                name: playa3ulldemoapp
                port:
                  number: 9000
